mejora en swagger
